--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ h2{
 	text-align: left;
 }
 
-h1#different{
+h1#grey{
 	color: grey;
 	text-align: center;
 }
@@ -22,10 +22,10 @@ img#matteo{
 	width: 400;
 }
 
-i{
-	align-self: center;
+i.fa{
+	text-align: center;
 }
 
-button{
-	align-items: right;
+button.btn{
+	text-align: right;
 }
