--- a/style/style.css
+++ b/style/style.css
@@ -13,11 +13,13 @@ h1.grey{
 }
 
 #nicola{
+	margin-left: 0.5cm;
 	height: 400px;
 	width: 293px;
 }
 
 #matteo{
+	margin-left: 0.5cm;
 	height: 400px;
 	width: 400px;
 }
